--- a/_1.Presentation/Views/Projects/Index.cshtml
+++ b/_1.Presentation/Views/Projects/Index.cshtml
@@ -820,7 +820,7 @@
                     <label class="form-label">Start Date</label>
                     <div class="date-wrapper">
                         <input type="date" class="form-input custom-date" />
-                        <img src="icons/calendar.svg"
+                        <img src="@Url.Content("~/Pictures/Icons/Calendar.svg")"
                              alt="Calendar"
                              class="calendar-icon-clickable" />
                     </div>
@@ -830,7 +830,7 @@
                     <label class="form-label">End Date</label>
                     <div class="date-wrapper">
                         <input type="date" class="form-input custom-date" />
-                        <img src="icons/calendar.svg"
+                        <img src="@Url.Content("~/Pictures/Icons/Calendar.svg")"
                              alt="Calendar"
                              class="calendar-icon-clickable" />
                     </div>
