Updated indentiy to Secutitylayer and usage of Integrationlayer for external authentication processes and github login.

--- a/_1.Presentation/Views/Customers/Index.cshtml
+++ b/_1.Presentation/Views/Customers/Index.cshtml
@@ -12,7 +12,7 @@
 
 <section class="content-section">
     <div class="section-header">
-        <h2 class="section-title">Managers</h2>
+        <h2 class="section-title">Customers</h2>
         @await Html.PartialAsync("~/Views/_Partials/UserListPartials/_SortByDropdown.cshtml",
                  new SortViewModel
         {
