--- a/_1.Presentation/Views/Shared/_AppLayout.cshtml
+++ b/_1.Presentation/Views/Shared/_AppLayout.cshtml
@@ -227,7 +227,7 @@
                             }
                             else
                             {
-                                <div class="avatar-initials">
+                                <div class="avatar-initials" style="font-size: 14px; line-height: 1;">
                                     @((ViewBag.UserName as string)?.Substring(0, 2).ToUpper())
                                 </div>
                             }
@@ -246,7 +246,7 @@
                             }
                             else
                             {
-                                <div class="avatar-initials">
+                                <div class="avatar-initials" style="font-size: 14px; line-height: 1;">
                                     @((ViewBag.UserName as string)?.Substring(0, 2).ToUpper())
                                 </div>
                             }
