--- a/_1.Presentation/Views/_Partials/UserListPartials/_MemberModals.cshtml
+++ b/_1.Presentation/Views/_Partials/UserListPartials/_MemberModals.cshtml
@@ -68,7 +68,8 @@
             </div>
         </header>
         <form id="deleteMemberForm" method="post" asp-controller="Users" asp-action="Delete" class="project-form">
-            <input type="hidden" name="Id" id="deleteMemberId" />
+            <input type="hidden" name="returnUrl" value="@Context.Request.Path" />
+            <input type="hidden" name="Id" id="deleteMemberId" value="" />
             <label class="form-label" style="margin: 1rem 0;">Are you sure you want to delete this member?</label>
             <div class="form-footer">
                 <button type="submit" class="submit-button danger-button">Delete</button>
